header fixed and <a> aligned

--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -17,6 +17,7 @@ body {
     font-weight: bold;
     padding: 0 20px 0 20px;
     background-color: white;
+    background-size: cover;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -32,6 +33,10 @@ body {
     display: flex;
 }
 
+.right-part {
+    flex-shrink: 0;
+}
+
 #search-field::placeholder {
     padding: 0 10px;
     font-weight: bold;
@@ -41,10 +46,9 @@ body {
 #search-field {
     padding: 0 0 0 20px;
     width: 280px;
-}
-
-.search-btn {
-    height: 2rem;
+    appearance: none;
+    border-width: 1px;
+    border-color: black;
 }
 
 .logo {
@@ -67,6 +71,8 @@ a:visited {
 
 a {
     color: rgb(128, 128, 128);
+    vertical-align: middle;
+    text-decoration: none;
 }
 
 .right-part .nav {
@@ -181,7 +187,7 @@ a {
     opacity: 0.9;
 }
 
-#login-form{
+#login-form {
     z-index: 1;
     background-color: darkgrey;
     border: #cdcdcd;
@@ -192,14 +198,15 @@ a {
     flex-direction: column;
 }
 
-.login-input{
+.login-input {
     height: 1.7rem;
     width: 15rem;
     margin: 5px 0 0 0;
     font-weight: bold;
     padding: 0 1rem;
 }
-.login-input::placeholder{
+
+.login-input::placeholder {
     text-align: center;
 }
 
@@ -214,7 +221,8 @@ select {
     display: inline-block;
     line-height: 1.5em;
     padding: 0.5em 3.5em 0.5em 1em;
-
+    border-radius: 0;
+    height: 100%;
     /* reset */
 
     margin: 0;
@@ -222,35 +230,30 @@ select {
     -webkit-appearance: none;
     -moz-appearance: none;
 }
-select{
-    background-image:
-            linear-gradient(45deg, transparent 50%, gray 50%),
-            linear-gradient(135deg, gray 50%, transparent 50%),
-            linear-gradient(to right, #ccc, #ccc);
-    background-position:
-            calc(100% - 20px) calc(1em + 2px),
-            calc(100% - 15px) calc(1em + 2px),
-            calc(100% - 2.5em) 0.5em;
-    background-size:
-            5px 5px,
-            5px 5px,
-            1px 1.5em;
+
+select {
+    background-image: linear-gradient(45deg, transparent 50%, gray 50%),
+    linear-gradient(135deg, gray 50%, transparent 50%),
+    linear-gradient(to right, #ccc, #ccc);
+    background-position: calc(100% - 20px) calc(1em + 2px),
+    calc(100% - 15px) calc(1em + 2px),
+    calc(100% - 2.5em) 0.5em;
+    background-size: 5px 5px,
+    5px 5px,
+    1px 1.5em;
     background-repeat: no-repeat;
 }
 
 select :focus {
-    background-image:
-            linear-gradient(45deg, green 50%, transparent 50%),
-            linear-gradient(135deg, transparent 50%, green 50%),
-            linear-gradient(to right, #ccc, #ccc);
-    background-position:
-            calc(100% - 15px) 1em,
-            calc(100% - 20px) 1em,
-            calc(100% - 2.5em) 0.5em;
-    background-size:
-            5px 5px,
-            5px 5px,
-            1px 1.5em;
+    background-image: linear-gradient(45deg, green 50%, transparent 50%),
+    linear-gradient(135deg, transparent 50%, green 50%),
+    linear-gradient(to right, #ccc, #ccc);
+    background-position: calc(100% - 15px) 1em,
+    calc(100% - 20px) 1em,
+    calc(100% - 2.5em) 0.5em;
+    background-size: 5px 5px,
+    5px 5px,
+    1px 1.5em;
     background-repeat: no-repeat;
     border-color: green;
     outline: 0;
